--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,10 @@ cmake_minimum_required(VERSION 3.19)
 project(10_day_practice)
 
 set(CMAKE_CXX_STANDARD 14)
-
-add_executable(10_day_practice main.cpp)
+# 遍历项目根目录下所有的 .cpp 文件
+file (GLOB files *.cpp */*.cpp)
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    add_executable (${exe} ${file})
+    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
+endforeach ()
